Netlify page for front page

--- a/docs/_includes/bellinternal.html
+++ b/docs/_includes/bellinternal.html
@@ -82,7 +82,7 @@
 
     <section class="inner-page">
       <div class="container">
-        {{ content }}
+        {{ content | markdownify }}
       </div>
     </section>
 
