--- a/docs/_includes/netlifycms_pages.html
+++ b/docs/_includes/netlifycms_pages.html
@@ -5,10 +5,18 @@
     slug: '{{slug}}'
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
+      - label: 'Language'
+        name: 'lang'
+        widget: select
+        default: en
+        options:
+          - { label: "English", value: "en" }
+          - { label: "français", value: "fr" }
       - label: 'Layout'
         name: 'layout'
         widget: select
         options:
+          - { label: "Content page - Bell look and feel", value: "bellinternal" }
           - { label: "List of events", value: "eventlist" }
           - { label: "List of blog posts", value: "bloglist" }
           - { label: "Basic pages", value: "page" }
